cmake_minimum_required(VERSION 3.10)
project(formatter_ex)
set(CMAKE_CURRENT_SOURCE_DIR /home/runner/work/Lab06_TIMP/Lab06_TIMP)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(formatter_ex STATIC ${CMAKE_CURRENT_SOURCE_DIR}/formatter_ex_lib/formatter_ex.cpp)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/formatter_lib)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/formatter_lib formatter)
target_link_libraries(formatter_ex formatter)
